# kafka-python

./: .covrc  .editorconfig  .envyfile  .gitignore  .gitmodules  .travis.yml  .unicode_files  AUTHORS.md  CHANGES.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  POWERED-BY.md  README.md  README.rst  VERSION  aws_example.py  build_integration.sh  conftest.py  example.py  kafka.py  load_example.py  notes.txt  protocol_notes.txt  pylint.rc  pyproject.toml  pytest.ini  requirements-dev.txt  run_itest.sh  run_utest.sh  setup.cfg  setup.py  test.py  test_streams.py  tox.ini  travis_java_install.sh  travis_run_tests.sh  travis_selector.sh
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  flakey-test-repro.yml  pytest.yml  python-package.yml
benchmarks/: README  README.md  consumer_performance.py  load_example.py  producer_performance.py  record_batch_compose.py  record_batch_read.py  varint_speed.py
docs/: Makefile  api_reference.rst  changelog.rst  compatibility.rst  conf.py  high_level.rst  index.rst  install.rst  kips.rst  license.rst  make.bat  requirements.txt  simple.rst  support.rst  tests.rst  upgrade_to_3_0.rst  usage.rst
docs/_static/: custom.css
docs/apidoc/: BrokerConnection.rst  ClusterMetadata.rst  KafkaAdmin.rst  KafkaAdminClient.rst  KafkaClient.rst  KafkaConnection.rst  KafkaConnectionManager.rst  KafkaConsumer.rst  KafkaProducer.rst  OffsetAndMetadata.rst  SimpleProducer.rst  TopicPartition.rst  kafka.consumer.rst  kafka.coordinator.assignors.rst  kafka.coordinator.rst  kafka.partitioner.rst  kafka.producer.rst  kafka.protocol.rst  kafka.rst  modules.rst
docs/cli/: admin.rst  consumer.rst  index.rst  producer.rst
kafka/: NOTES.md  __init__.py  __main__.py  _command_utils.py  _script_utils.py  admin_client.py  aws_utils.py  client.py  client08.py  client_async.py  cluster.py  codec.py  common.py  compat.py  conn.py  consumer.py  context.py  errors.py  future.py  msk.py  partitioner.py  producer.py  protocol.py  queue.py  scram.py  socks5_wrapper.py  structs.py  transaction.py  util.py  version.py  zookeeper.py
kafka/admin/: __init__.py  __main__.py  _acls.py  _cluster.py  _configs.py  _groups.py  _metadata.py  _partitions.py  _records.py  _topics.py  _transactions.py  _users.py  acl_resource.py  client.py  config_resource.py  coordinator_type.py  kafka.py  leader_election_resources.py  new_partitions.py  new_topic.py
kafka/benchmarks/: consumer_performance.py  load_example.py  producer_encode_path.py  producer_performance.py  profile_protocol.py  protocol_old_vs_new.py  record_batch_compose.py  record_batch_read.py  varint_speed.py
kafka/cli/: __init__.py  common.py
kafka/consumer/: __init__.py  __main__.py  base.py  fetcher.py  group.py  kafka.py  multiprocess.py  new.py  simple.py  subscription_state.py
kafka/coordinator/: abstract.py  base.py  consumer.py  heartbeat.py  protocol.py  subscription.py
kafka/green/: __init__.py  client.py  conn.py  producer.py
kafka/metrics/: __init__.py  compound_stat.py  dict_reporter.py  kafka_metric.py  measurable.py  measurable_stat.py  metric_config.py  metric_name.py  metrics.py  metrics_reporter.py  quota.py  stat.py
kafka/net/: __init__.py  asyncio_backend.py  backend.py  compat.py  (+12 more)
scripts/: kp_consumer  kp_create_topic  kp_producer
test/: __init__.py  conftest.py  fixtures.py  integration.py  mock_broker.py  service.py  test_admin.py  test_admin_client.py  test_admin_client_broker_availability.py  test_admin_client_integration.py  test_admin_integration.py  test_api_object_implementation.py  test_assignors.py  test_backend_future.py  test_buffer.py  test_client.py  test_client_async.py  test_client_integration.py  test_cluster.py  test_codec.py  test_conn.py  test_conn_legacy.py  test_consumeproduce_integration.py  test_consumer.py  test_consumer_group.py  test_consumer_integration.py  test_context.py  test_coordinator.py  test_error_on_callbacks.py  test_failover_integration.py  test_fetcher.py  test_future.py  test_gevent.py  test_integration.py  test_memory_check.py  test_metrics.py  test_mock_broker.py  test_msk.py  test_object_conversion.py  test_package.py  (+21 more)
(+685 files in other folders)
